--- a/sass/modules/_artist-bio.sass
+++ b/sass/modules/_artist-bio.sass
@@ -2,3 +2,74 @@
     width: 100%
     height: 100%
     display: block
+
+    ul
+        li
+            +inline-block
+            width: 23%
+            margin: 1%
+            border: 2px solid $border-color
+            box-shadow: 0 0 10px rgba(0,0,0,0.5)
+            background-color: white
+            border-radius: 10px
+            overflow: hidden
+    
+    .search-term
+        +rem(padding, 5px 15px)
+        text-align: center
+        text-transform: uppercase
+        +rem(font-size, 14px)
+        font-weight: bold
+
+    .artist-pic-container
+        +inline-block
+        width: 37%
+        height: 80px
+        font-size: 0
+        overflow: hidden
+
+        img
+            width: auto
+            height: 100%
+            position: relative
+            left: 49%
+            +vendor-prefix(transform, translateX(-50%))
+    
+    .artist-meta
+        position: relative
+
+    .artist-name
+        +inline-block
+        margin-left: 3%
+        margin-top: 3%
+        +rem(padding-right, 10px)
+        width: 58%
+
+    a.expand
+        position: absolute
+        +rem(top, 60px)
+        +rem(right, 7px)
+        +rem(font-size, 12px)
+        text-transform: uppercase
+        cursor: pointer
+
+        &:hover, &:focus
+            text-decoration: none
+    
+    .more-info-container
+        &.hidden
+            .more-info
+                height: 0
+                opacity: 0
+
+    .more-info
+        +rem(font-size, 14px)
+        transition: all 0.2s ease-in-out
+        height: 400px
+        opacity: 1
+        
+        > *
+            +rem(margin, 0 15px)
+        h3
+            +rem(margin, 0 15px)
+            +rem(padding-top, 15px)
